--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
+                <img src="assets/logo-detailed.svg" alt="Knowledge Computing Group Logo" class="nav-logo-img">
                 <h2>Knowledge Computing Group</h2>
             </div>
             <ul class="nav-menu">
@@ -20,12 +21,6 @@
                 </li>
                 <li class="nav-item">
                     <a href="research.html" class="nav-link">Research</a>
-                </li>
-                <li class="nav-item">
-                    <a href="news.html" class="nav-link">News</a>
-                </li>
-                <li class="nav-item">
-                    <a href="events.html" class="nav-link">Events</a>
                 </li>
                 <li class="nav-item">
                     <a href="projects.html" class="nav-link">Projects</a>
@@ -155,10 +150,27 @@
             <div class="container">
                 <h2>位置地图</h2>
                 <div class="map-container">
-                    <div class="map-placeholder">
-                        <i class="fas fa-map"></i>
-                        <p>地图加载中...</p>
-                        <p>Address: No.6 Kexueyuan South Road, Haidian District, Beijing</p>
+                    <div class="map-info">
+                        <div class="location-details">
+                            <h3>中国科学院计算技术研究所</h3>
+                            <p><i class="fas fa-map-marker-alt"></i> 北京市海淀区中关村科学院南路6号</p>
+                            <p><i class="fas fa-phone"></i> +86-10-6260-1234</p>
+                            <p><i class="fas fa-envelope"></i> contact@kclab.ict.ac.cn</p>
+                            <div class="map-actions">
+                                <a href="https://map.baidu.com/search/中国科学院计算技术研究所/@12947539.45,4835350.18,19z" target="_blank" class="btn btn-primary">查看百度地图</a>
+                                <a href="https://www.openstreetmap.org/search?query=中国科学院计算技术研究所" target="_blank" class="btn btn-secondary">查看OpenStreetMap</a>
+                            </div>
+                        </div>
+                        <div class="map-embed">
+                            <iframe 
+                                src="https://map.baidu.com/search/中国科学院计算技术研究所/@12947539.45,4835350.18,19z" 
+                                width="100%" 
+                                height="400" 
+                                frameborder="0" 
+                                style="border:0; border-radius: 10px;"
+                                allowfullscreen>
+                            </iframe>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -222,12 +234,13 @@
                     <p>致力于人工智能前沿技术研究</p>
                 </div>
                 <div class="footer-section">
-                    <h4>快速链接</h4>
+                    <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="research.html">研究</a></li>
-                        <li><a href="news.html">新闻</a></li>
-                        <li><a href="events.html">活动</a></li>
-                        <li><a href="projects.html">项目</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="research.html">Research</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="people.html">People</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
