--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
+                <img src="assets/logo-detailed.svg" alt="Knowledge Computing Group Logo" class="nav-logo-img">
                 <h2>Knowledge Computing Group</h2>
             </div>
             <ul class="nav-menu">
@@ -20,12 +21,6 @@
                 </li>
                 <li class="nav-item">
                     <a href="research.html" class="nav-link">Research</a>
-                </li>
-                <li class="nav-item">
-                    <a href="news.html" class="nav-link">News</a>
-                </li>
-                <li class="nav-item">
-                    <a href="events.html" class="nav-link">Events</a>
                 </li>
                 <li class="nav-item">
                     <a href="projects.html" class="nav-link">Projects</a>
@@ -145,39 +140,33 @@
             <div class="container">
                 <h2>Latest News</h2>
                 <div class="news-grid">
-                    <a href="news.html#icml-2024" class="news-card-link">
-                        <article class="news-card">
-                            <div class="news-date">2024-01-15</div>
-                            <h3>Paper Accepted at ICML 2024</h3>
-                            <p>Our research paper "Knowledge-Enhanced Deep Learning for Medical Image Analysis" has been accepted at ICML 2024...</p>
-                            <div class="read-more">
-                                <span>Read More</span>
-                                <i class="fas fa-arrow-right"></i>
-                            </div>
-                        </article>
-                    </a>
-                    <a href="news.html#huawei-collaboration" class="news-card-link">
-                        <article class="news-card">
-                            <div class="news-date">2024-01-10</div>
-                            <h3>Collaboration Agreement with Huawei</h3>
-                            <p>Our group has signed a three-year research collaboration agreement with Huawei Technologies to advance knowledge computing...</p>
-                            <div class="read-more">
-                                <span>Read More</span>
-                                <i class="fas fa-arrow-right"></i>
-                            </div>
-                        </article>
-                    </a>
-                    <a href="news.html#best-paper-award" class="news-card-link">
-                        <article class="news-card">
-                            <div class="news-date">2024-01-05</div>
-                            <h3>Best Student Paper Award</h3>
-                            <p>PhD student Zhang San received the Best Student Paper Award at AAAI 2024 for work on knowledge graph reasoning...</p>
-                            <div class="read-more">
-                                <span>Read More</span>
-                                <i class="fas fa-arrow-right"></i>
-                            </div>
-                        </article>
-                    </a>
+                    <div class="news-card">
+                        <div class="news-date">2024-01-15</div>
+                        <h3>Paper Accepted at ICML 2024</h3>
+                        <p>Our research paper "Knowledge-Enhanced Deep Learning for Medical Image Analysis" has been accepted at ICML 2024...</p>
+                        <div class="read-more">
+                            <span>Read More</span>
+                            <i class="fas fa-arrow-right"></i>
+                        </div>
+                    </div>
+                    <div class="news-card">
+                        <div class="news-date">2024-01-10</div>
+                        <h3>Collaboration Agreement with Huawei</h3>
+                        <p>Our group has signed a three-year research collaboration agreement with Huawei Technologies to advance knowledge computing...</p>
+                        <div class="read-more">
+                            <span>Read More</span>
+                            <i class="fas fa-arrow-right"></i>
+                        </div>
+                    </div>
+                    <div class="news-card">
+                        <div class="news-date">2024-01-05</div>
+                        <h3>Best Student Paper Award</h3>
+                        <p>PhD student Zhang San received the Best Student Paper Award at AAAI 2024 for work on knowledge graph reasoning...</p>
+                        <div class="read-more">
+                            <span>Read More</span>
+                            <i class="fas fa-arrow-right"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -187,38 +176,34 @@
             <div class="container">
                 <h2>Upcoming Events</h2>
                 <div class="events-list">
-                    <a href="events.html#knowledge-computing-workshop" class="event-item-link">
-                        <div class="event-item">
-                            <div class="event-date">
-                                <span class="month">02</span>
-                                <span class="day">15</span>
-                            </div>
-                            <div class="event-content">
-                                <h3>Knowledge Computing Workshop</h3>
-                                <p>Time: February 15, 2024 14:00-17:00</p>
-                                <p>Location: Academic Conference Hall</p>
-                                <div class="event-arrow">
-                                    <i class="fas fa-arrow-right"></i>
-                                </div>
+                    <div class="event-item">
+                        <div class="event-date">
+                            <span class="month">02</span>
+                            <span class="day">15</span>
+                        </div>
+                        <div class="event-content">
+                            <h3>Knowledge Computing Workshop</h3>
+                            <p>Time: February 15, 2024 14:00-17:00</p>
+                            <p>Location: Academic Conference Hall</p>
+                            <div class="event-arrow">
+                                <i class="fas fa-arrow-right"></i>
                             </div>
                         </div>
-                    </a>
-                    <a href="events.html#ai-industry-forum" class="event-item-link">
-                        <div class="event-item">
-                            <div class="event-date">
-                                <span class="month">02</span>
-                                <span class="day">28</span>
-                            </div>
-                            <div class="event-content">
-                                <h3>AI Industry Application Forum</h3>
-                                <p>Time: February 28, 2024 09:00-12:00</p>
-                                <p>Location: International Conference Center</p>
-                                <div class="event-arrow">
-                                    <i class="fas fa-arrow-right"></i>
-                                </div>
+                    </div>
+                    <div class="event-item">
+                        <div class="event-date">
+                            <span class="month">02</span>
+                            <span class="day">28</span>
+                        </div>
+                        <div class="event-content">
+                            <h3>AI Industry Application Forum</h3>
+                            <p>Time: February 28, 2024 09:00-12:00</p>
+                            <p>Location: International Conference Center</p>
+                            <div class="event-arrow">
+                                <i class="fas fa-arrow-right"></i>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -236,8 +221,6 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="research.html">Research</a></li>
-                        <li><a href="news.html">News</a></li>
-                        <li><a href="events.html">Events</a></li>
                         <li><a href="projects.html">Projects</a></li>
                     </ul>
                 </div>
