--- a/research.html
+++ b/research.html
@@ -12,6 +12,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
+                <img src="assets/logo-detailed.svg" alt="Knowledge Computing Group Logo" class="nav-logo-img">
                 <h2>Knowledge Computing Group</h2>
             </div>
             <ul class="nav-menu">
@@ -20,12 +21,6 @@
                 </li>
                 <li class="nav-item">
                     <a href="research.html" class="nav-link active">Research</a>
-                </li>
-                <li class="nav-item">
-                    <a href="news.html" class="nav-link">News</a>
-                </li>
-                <li class="nav-item">
-                    <a href="events.html" class="nav-link">Events</a>
                 </li>
                 <li class="nav-item">
                     <a href="projects.html" class="nav-link">Projects</a>
@@ -137,54 +132,28 @@
             <div class="container">
                 <h2>近期发表论文</h2>
                 <div class="publications-list">
-                    <div class="publication-item">
+                    <div class="publication-item clickable-card" data-url="https://github.com/ICT-GoKnow/RobustUIE">
+                        <div class="pub-year">2025</div>
+                        <div class="pub-content">
+                            <h3>Towards Robust Universal Information Extraction: Dataset, Evaluation, and Solution</h3>
+                            <p class="pub-authors">Jizhao Zhu, Akang Shi, Zixuan Li, Long Bai, Xiaolong Jin, Jiafeng Guo, Xueqi Cheng</p>
+                            <p class="pub-venue">Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics (ACL), 2025</p>
+                            <div class="pub-links">
+                                <a href="https://aclanthology.org/2025.acl-long.1360/" class="btn btn-small" target="_blank">PDF</a>
+                                <a href="https://github.com/ICT-GoKnow/RobustUIE" class="btn btn-small" target="_blank">代码</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="publication-item clickable-card" data-url="https://github.com/ICT-GoKnow/KnowCoder">
                         <div class="pub-year">2024</div>
                         <div class="pub-content">
-                            <h3>Deep Learning for Medical Image Analysis: A Comprehensive Survey</h3>
-                            <p class="pub-authors">张三, 李四, 王五, 赵六</p>
-                            <p class="pub-venue">International Conference on Machine Learning (ICML), 2024</p>
+                            <h3>KnowCoder: Coding Structured Knowledge into LLMs for Universal Information Extraction</h3>
+                            <p class="pub-authors">Zixuan Li, Yutao Zeng, Yuxin Zuo, Weicheng Ren, Wenxuan Liu, Miao Su, Yucan Guo, Yantao Liu, Xiang Li, Zhilei Hu, Long Bai, Wei Li, Yidan Liu, Pan Yang, Xiaolong Jin, Jiafeng Guo, Xueqi Cheng</p>
+                            <p class="pub-venue">arXiv preprint arXiv:2403.07969, 2024</p>
                             <div class="pub-links">
-                                <a href="#" class="btn btn-small">PDF</a>
-                                <a href="#" class="btn btn-small">代码</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="publication-item">
-                        <div class="pub-year">2024</div>
-                        <div class="pub-content">
-                            <h3>Federated Learning with Differential Privacy: A Survey</h3>
-                            <p class="pub-authors">李四, 张三, 刘七</p>
-                            <p class="pub-venue">AAAI Conference on Artificial Intelligence (AAAI), 2024</p>
-                            <div class="pub-links">
-                                <a href="#" class="btn btn-small">PDF</a>
-                                <a href="#" class="btn btn-small">代码</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="publication-item">
-                        <div class="pub-year">2023</div>
-                        <div class="pub-content">
-                            <h3>Multi-Modal Learning for Video Understanding</h3>
-                            <p class="pub-authors">王五, 张三, 陈八</p>
-                            <p class="pub-venue">IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023</p>
-                            <div class="pub-links">
-                                <a href="#" class="btn btn-small">PDF</a>
-                                <a href="#" class="btn btn-small">代码</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="publication-item">
-                        <div class="pub-year">2023</div>
-                        <div class="pub-content">
-                            <h3>Large Language Models for Code Generation: A Comprehensive Study</h3>
-                            <p class="pub-authors">赵六, 李四, 王五</p>
-                            <p class="pub-venue">Conference on Empirical Methods in Natural Language Processing (EMNLP), 2023</p>
-                            <div class="pub-links">
-                                <a href="#" class="btn btn-small">PDF</a>
-                                <a href="#" class="btn btn-small">代码</a>
+                                <a href="https://arxiv.org/abs/2403.07969" class="btn btn-small" target="_blank">PDF</a>
+                                <a href="https://github.com/ICT-GoKnow/KnowCoder" class="btn btn-small" target="_blank">代码</a>
                             </div>
                         </div>
                     </div>
@@ -240,12 +209,13 @@
                     <p>致力于人工智能前沿技术研究</p>
                 </div>
                 <div class="footer-section">
-                    <h4>快速链接</h4>
+                    <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="research.html">研究</a></li>
-                        <li><a href="news.html">新闻</a></li>
-                        <li><a href="events.html">活动</a></li>
-                        <li><a href="projects.html">项目</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="research.html">Research</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="people.html">People</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
