--- a/events.html
+++ b/events.html
@@ -22,12 +22,6 @@
                     <a href="research.html" class="nav-link">Research</a>
                 </li>
                 <li class="nav-item">
-                    <a href="news.html" class="nav-link">News</a>
-                </li>
-                <li class="nav-item">
-                    <a href="events.html" class="nav-link active">Events</a>
-                </li>
-                <li class="nav-item">
                     <a href="projects.html" class="nav-link">Projects</a>
                 </li>
                 <li class="nav-item">
@@ -46,7 +40,16 @@
     </nav>
 
     <!-- 主要内容 -->
-    <main>
+    <main class="events-page">
+        <!-- 隐藏消息 -->
+        <div style="text-align: center; padding: 50px 20px; background: #f8f9fa; min-height: 100vh;">
+            <h1 style="color: #666; margin-bottom: 20px;">页面暂时不可用</h1>
+            <p style="color: #888; font-size: 1.1rem;">活动页面正在维护中，请稍后再试。</p>
+            <a href="index.html" style="display: inline-block; margin-top: 20px; padding: 10px 20px; background: #007bff; color: white; text-decoration: none; border-radius: 5px;">返回首页</a>
+        </div>
+        
+        <!-- 原始内容（已隐藏） -->
+        <div style="display: none;">
         <!-- 页面标题 -->
         <section class="page-header">
             <div class="container">
@@ -263,10 +266,11 @@
                 <div class="footer-section">
                     <h4>快速链接</h4>
                     <ul>
+                        <li><a href="index.html">首页</a></li>
                         <li><a href="research.html">研究</a></li>
-                        <li><a href="news.html">新闻</a></li>
-                        <li><a href="events.html">活动</a></li>
                         <li><a href="projects.html">项目</a></li>
+                        <li><a href="people.html">人员</a></li>
+                        <li><a href="contact.html">联系我们</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -280,6 +284,7 @@
                 <p>&copy; 2024 智能计算研究组. 保留所有权利.</p>
             </div>
         </div>
+        </div> <!-- 关闭隐藏的原始内容div -->
     </footer>
 
     <script src="js/script.js"></script>
