--- a/people.html
+++ b/people.html
@@ -12,6 +12,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
+                <img src="assets/logo-detailed.svg" alt="Knowledge Computing Group Logo" class="nav-logo-img">
                 <h2>Knowledge Computing Group</h2>
             </div>
             <ul class="nav-menu">
@@ -20,12 +21,6 @@
                 </li>
                 <li class="nav-item">
                     <a href="research.html" class="nav-link">Research</a>
-                </li>
-                <li class="nav-item">
-                    <a href="news.html" class="nav-link">News</a>
-                </li>
-                <li class="nav-item">
-                    <a href="events.html" class="nav-link">Events</a>
                 </li>
                 <li class="nav-item">
                     <a href="projects.html" class="nav-link">Projects</a>
@@ -355,10 +350,11 @@
                 <div class="footer-section">
                     <h4>Quick Links</h4>
                     <ul>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="research.html">Research</a></li>
-                        <li><a href="news.html">News</a></li>
-                        <li><a href="events.html">Events</a></li>
                         <li><a href="projects.html">Projects</a></li>
+                        <li><a href="people.html">People</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
